<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/home_presentation"
        app:layout_constraintBottom_toTopOf="@+id/text_presentation_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.278" />

    <TextView
        android:id="@+id/title_presentation_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/title_presentation_home"
        android:textAlignment="center"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.383" />

    <TextView
        android:id="@+id/text_presentation_home"
        android:layout_width="351dp"
        android:layout_height="91dp"
        android:text="@string/text_presentation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_presentation_home"
        app:layout_constraintVertical_bias="0.039" />

    <TextView
        android:id="@+id/title_section_tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_section_tools"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.595" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="387dp"
        android:layout_height="140dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/title_presentation_home"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/title_presentation_home"
        app:layout_constraintTop_toBottomOf="@+id/title_section_tools"
        app:layout_constraintVertical_bias="0.049">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="8dp"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:id="@+id/btn_articles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="74dp"
                    android:contentDescription="@string/alt_article_button"
                    android:src="@drawable/article_item" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_title_article"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="74dp"
                    android:contentDescription="@string/alt_test_button"
                    android:src="@drawable/test_item" />

                <TextView
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_title_test"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_respiration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="74dp"
                    android:contentDescription="@string/alt_respiration_button"
                    android:src="@drawable/breathe_item" />

                <TextView
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_title_respiration"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_detente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="74dp"
                    android:contentDescription="@string/alt_detente_button"
                    android:src="@drawable/detente_item" />

                <TextView
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_title_detente"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_tracker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="74dp"
                    android:contentDescription="@string/alt_tracker_button"
                    android:src="@drawable/tracker_item" />

                <TextView
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_title_tracker"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>